Fix(footer): change 100vw to 100% to stop horizontal scroll

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -227,7 +227,7 @@ footer {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     padding-bottom: 2rem;
     margin-top: auto;
-    width: 100vw;
+    width: 100%;
 }
 
 footer div {
